# pine-v6-forward-validation

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
configs/: amlrx_v0_1.yaml  iax_v1_1_3.yaml  real_validation_inputs.example.yaml  symbols_bybit_perps.yaml  validation_defaults.yaml
data/fixtures/: forward_validation_fixture.csv
data/pine_exports/: example_export_contract.csv
docs/: autonomous_agent_assignment_v1_0_0.md  ci_quality_gates.md  forward_validation_evidence.md  pine_export_evidence.md  real_parity_evidence.md  real_validation_inputs.md  release_go_map.md  release_hold_gate_resolution_plan_v1_0_1.md  v0_3_0_real_data_export_contract.md
scripts/: fetch_bybit_data.py  make_sample_data.py  run_data_quality.py  run_export_schema_check.py  run_forward_reconciliation.py  run_forward_shadow.py  run_forward_validation_evidence.py  run_multi_symbol_walk_forward.py  run_no_future_leak_check.py  run_optimizer.py  run_parity_check.py  run_pine_export_evidence.py  run_real_input_manifest_check.py  run_real_parity_evidence.py  run_release_gate.py  run_walk_forward.py
src/: __init__.py
src/data/: __init__.py  bybit_ohlcv_loader.py  bybit_schema.py  config_loader.py  csv_loader.py  data_quality.py  data_quality_gate.py  pine_export_schema.py  real_input_manifest.py  resampler.py  schema.py
src/engine/: __init__.py  cost_model.py  multi_symbol.py  robustness.py  signal_engine.py  trade_engine.py  walk_forward.py
src/optimizers/: grid_search.py  vectorbt_optimizer.py
src/pine_parity/: __init__.py  export_contract.py  future_leak.py  indicators.py  mtf.py  mtf_compat_note.txt  parity_checker.py  (+2 more)
tests/: test_bybit_loader.py  test_bybit_schema.py  test_config_loader.py  test_csv_loader.py  test_data_quality_gate.py  test_data_schema.py  test_export_contract.py  test_forward_validation_evidence.py  test_future_leak_checker.py  test_indicators.py  test_mtf.py  test_mtf_alignment.py  test_multi_symbol.py  test_no_future_leak.py  test_parity_checker.py  test_parity_evidence.py  test_pine_export_evidence.py  test_pine_export_schema.py  test_pine_parity.py  test_real_input_manifest.py  test_reconciliation.py  test_release_decision.py  test_resampler.py  test_robustness_metrics.py  test_rolling.py  test_signal_engine.py  test_summary_report.py  test_trade_engine.py  test_walk_forward.py
(+16 files in other folders)
