[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pine-v6-forward-validation"
version = "0.1.0"
description = "Forward validation and Pine-v6 parity harness for crypto perpetual strategy research."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy>=1.24", "pandas>=2.0", "PyYAML>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
live = ["ccxt>=4.0"]
replay = ["backtrader>=1.9"]
optimizer = ["vectorbt>=0.26"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]
testpaths = ["tests"]
