[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pine-v6-forward-validation"
version = "0.2.0"
description = "Pine v6 parity, walk-forward and forward-validation harness for Bybit crypto perpetual strategies"
requires-python = ">=3.10"
authors = [{name = "Tacticus Kilgore"}]

[tool.setuptools]
packages = [
  "src",
  "src.data",
  "src.pine_parity",
  "src.strategies",
  "src.engine",
  "src.optimizers",
  "src.replay",
  "src.reports"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"
