[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pine-v6-forward-validation"
version = "0.4.0"
description = "Pine v6 parity, walk-forward and forward-validation harness for Bybit crypto perpetual strategies"
requires-python = ">=3.10"
authors = [{name = "Tacticus Kilgore"}]
dependencies = [
  "pandas>=2.2",
  "numpy>=1.26",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
live = [
  "ccxt>=4.3",
]
replay = [
  "backtrader>=1.9.78.123",
]
optimizer = [
  "vectorbt>=0.26.0",
  "numba>=0.59",
]
all = [
  "pytest>=8.0",
  "ccxt>=4.3",
  "backtrader>=1.9.78.123",
  "vectorbt>=0.26.0",
  "numba>=0.59",
]

[tool.setuptools]
packages = [
  "src",
  "src.data",
  "src.pine_parity",
  "src.strategies",
  "src.engine",
  "src.optimizers",
  "src.replay",
  "src.reports"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"
